<resources>
    <string name="app_name">DepEat</string>
    <string name="cart">Cart</string>
    <string name="credits">Developed by <u>@Alexius33</u></string>
    <string name="version">v0.1</string>
    <string name="email">Email</string>
    <string name="email_hint">Please enter email here</string>
    <string name="password">Password</string>
    <string name="password_hint">Please enter password here</string>
    <string name="password_confirm">Confirm password</string>
    <string name="login">Login</string>
    <string name="login_successful">Login succesful!</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="remember_me">Remember me</string>
    <string name="name">Name</string>
    <string name="name_hint">Insert name here</string>
    <string name="surname">Surname</string>
    <string name="surname_hint">Insert surname here</string>
    <string name="checkout">Checkout</string>
    <string name="min_checkout">Minimum checkout: </string>
    <string name="min_checkout_value">VALUE</string>
    <string name="total">Total: </string>
    <string name="total_value">VALUE</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="wrong_password">Wrong password</string>
    <string name="welcome">Welcome</string>
    <string name="login_required">Please login first</string>
    <string name="user_logged_out">User logged out</string>
    <string name="forgot_password_toast">An email has been sent to you</string>
    <string name="error">Ops, something went wrong</string>
    <string name="currency">€</string>
    <string name="price">Price:</string>
    <string name="menu">Menu</string>
    <string name="review_order">Review your order:</string>
    <string name="pay">Pay</string>
    <string name="nothing">Wops! Nothing to show here.</string>
    <string name="profile">Profile</string>
    <string name="session_id_key">DepEatSessionIdKey</string>



    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore
        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut
        aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>
