<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/grid_menu"
        android:title="@string/login"
        android:visible="false"
        android:icon="@drawable/outline_grid_on_white_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/card_menu"
        android:title="@string/login"
        android:visible="false"
        android:icon="@drawable/outline_view_agenda_white_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/login_menu"
        android:title="@string/login"
        android:visible="false"/>
    <item
        android:id="@+id/logout_menu"
        android:title="@string/logout"
        android:visible="false"/>
    <item
        android:id="@+id/settings_menu"
        android:title="@string/settings"/>
</menu>