<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/relative_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/restaurant_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_round"
            android:padding="8dp"
            android:scaleType="fitXY"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/restaurant_iv"
            android:layout_toStartOf="@id/maps_iv"
            android:gravity="center">
            <TextView
                android:id="@+id/restaurant_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="NOME_RISTORANTE"
                android:layout_marginTop="25dp"
                android:textColor="@color/primary_text"
                android:gravity="center" />
            <TextView
                android:id="@+id/restaurant_address_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="ADDRESS"
                android:layout_alignStart="@id/restaurant_name_tv"
                android:layout_alignEnd="@id/restaurant_name_tv"
                android:layout_below="@id/restaurant_name_tv"
                android:gravity="center"
                android:textColor="@color/secondary_text"/>
        </RelativeLayout>
        <ImageView
            android:id="@+id/maps_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_place_black_24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true"/>
    </RelativeLayout>




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relative_layout_1"
        android:layout_above="@id/linear_layout_2">
    </androidx.recyclerview.widget.RecyclerView>




    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:padding="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/min_checkout"
                android:textColor="@color/primary_text"/>
            <TextView
                android:id="@+id/min_order_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/min_checkout_value"
                android:layout_weight="2"
                android:textColor="@color/primary_text"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/primary_text"/>
            <TextView
                android:id="@+id/total_price_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/min_checkout_value"
                android:layout_weight="1"
                android:textColor="@color/primary_text"/>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:progress="0" />
        <Button
            android:id="@+id/checkout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkout"
            android:textAlignment="center"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/secondary_text"
            android:enabled="false"/>
    </LinearLayout>
</RelativeLayout>